--- a/script/fast_fly/gates/gates_real.yaml
+++ b/script/fast_fly/gates/gates_real.yaml
@@ -1,11 +1,11 @@
 # 7
-pos: [[0,0,-0.4],
-      [-3.9,-1.6,-1.55],
-      [-7.3,0,-0.4],
-      [-9.5,1.36,-1.22],
-      [-9.2,-1.52,-1.32],
-      [-6.8,0.45,-1.33],
-      [-3.94,1.35,-1.2]]
+pos: [[-0.2, 0.21, -0.34],
+      [-3.91, -1.26, -1.5],
+      [-8.52, 0.37, -0.66],
+      [-11.4, 1.2, -1.42],
+      [-10.95, -1.28, -1.51],
+      [-8.36, -0.01, -1.31],
+      [-3.81, 1.67, -1.04]]
 
 rot: [
   0,
