--- a/script/fast_fly/quad/quad_real.yaml
+++ b/script/fast_fly/quad/quad_real.yaml
@@ -2,11 +2,12 @@ mass: 1.2
 arm_length: 0.3
 
 inertia: [0.01, 0.01, 0.02]
-drag_coeff: [0.4, 0.316, 0.23]
+drag_coeff: [0.33, 0.27, 0.25]
+# drag_coeff: [0.43, 0.37, 0.35]
 torque_coeff: 0.0133
 
 omega_xy_max: 6
 omega_z_max: 2
 
 thrust_min: 0.0
-thrust_max: 6.9   # max accel z: 23m/s^2
+thrust_max: 6.5   # max accel z: 23m/s^2
