--- a/script/fast_fly/gates/gates_real.yaml
+++ b/script/fast_fly/gates/gates_real.yaml
@@ -1,14 +1,20 @@
 # 7
-pos: [[-0.2, 0.21, -0.34],
-      [-3.91, -1.26, -1.5],
-      [-8.52, 0.37, -0.66],
-      [-11.4, 1.2, -1.42],
-      [-10.95, -1.28, -1.51],
-      [-8.36, -0.01, -1.31],
-      [-3.81, 1.67, -1.04]]
+# pos: [[ 7.65,  0.20, -0.85],
+#       [ 4.38, -1.52, -1.86],
+#       [ 0.05, -0.02, -0.76],
+#       [-2.60,  1.38, -1.75],
+#       [-1.93, -1.44, -1.62],
+#       [ 0.62,  0.46, -1.72],
+#       [ 4.61,  1.36, -1.22]]
+
+pos: [[ 1.59,  0.84, -0.86],
+      [ 6.70,  1.32, -1.43],
+      [ 5.14, -1.56, -1.51],
+      [ 2.68, -1.47, -1.47],
+      [-2.12,  1.20, -1.87],
+      [-2.14, -1.23, -1.83]]
 
 rot: [
-  0,
   0,
   0,
   0,
