--- a/script/fast_fly/quad/quad_real.yaml
+++ b/script/fast_fly/quad/quad_real.yaml
@@ -1,13 +1,14 @@
-mass: 1.2
+mass: 1.130
 arm_length: 0.3
 
 inertia: [0.01, 0.01, 0.02]
-drag_coeff: [0.33, 0.27, 0.25]
-# drag_coeff: [0.43, 0.37, 0.35]
+drag_coeff: [0.44, 0.35, 0.31]
+# drag_coeff: [0.40, 0.32, 0.28]
 torque_coeff: 0.0133
 
 omega_xy_max: 6
 omega_z_max: 2
 
 thrust_min: 0.0
-thrust_max: 6.5   # max accel z: 23m/s^2
+thrust_max: 6.2
+thrust_max: 6.9   # max accel z: 24.46m/s^2
